# python-calculator

./: .black  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  Prompts.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: dash_app.py  streamlit_app.py
scripts/: setup-pre-commit.sh
src/python_calculator/: __init__.py  calculator.py  ui.py
tests/: test_calculator.py  test_ui.py
